--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div id="token">
 
-
+<button onclick="get_ifram_token()" >hi kira </button>
     </div>
     <br>
     <script src="code.js"></script>
